--- a/static/css/BASE.css
+++ b/static/css/BASE.css
@@ -12,9 +12,10 @@ html {
     margin-top: 50px;
     /* width: 100vw;
     height: 100vh; */
-    background-color: #F4F3F2;
+    /* background-color: #F4F3F2; */
 }
 
+/* initial code, but is following wallink imp. CHANGE IN ACCORDING TO USE */
 /* .content {
     max-width: 1140px;
     height: 100%;
